fixed spacing

--- a/public/style.css
+++ b/public/style.css
@@ -138,7 +138,7 @@ select:hover {
   /* justify-content: center; */
   margin-right: 25px;
   box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.65);
-  height: 520px;
+  height: 535px;
   /* padding-top: 25px; */
 }
 
